<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyPets-App</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="birth">Birth</string>
    <string name="name_pet">Name Pet</string>
    <string name="date" tools:ignore="TypographyDashes">18-10-2018</string>
    <string name="type_pet">Type Pet</string>
    <string name="type">Type</string>
</resources>