<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/picture"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabChoosePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_picture" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPicture"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/overview"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/species"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/species"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/breed"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/gender" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/gender"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_date" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <EditText
                            android:id="@+id/birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/birth"
                            android:importantForAutofill="no"
                            android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>